Added rule: endOfLine: "auto"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,9 @@
 		"@typescript-eslint"
 	],
 	"rules": {
-		"prettier/prettier": "error",
+		"prettier/prettier": ["error", {
+			"endOfLine": "auto"
+		}],
 		"no-console": "off",
 		"import/extensions": [
 			"error",
