--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
 		"plugin:import/warnings",
 		"plugin:import/typescript",
 		"prettier/@typescript-eslint",
-		"plugin:prettier/recommended"
+		"plugin:prettier/recommended",
+		"plugin:react-hooks/recommended"
 	],
 	"globals": {
 		"Atomics": "readonly",
