--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
   "devDependencies": {
     "@storybook/react": "^6.1.14",
     "@types/storybook__react": "^5.2.1",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1",
-    "sass": "^1.32.5",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "sass": "^1.32.5"
   },
   "husky": {
     "hooks": {
